Navbar no longer covers content on small devices

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,17 +12,8 @@
  *= require_tree .
  */
 
-body {
-  padding-top: 60px;
-}
-
 p {
 	text-align: justify;
-}
-@media (max-width: 768px) {
-  body {
-    padding-top: 200px;
-  }
 }
 
 a {
